# auto_photo

./: .gitattributes  .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.dev-ai-bridge.mjs
.github/workflows/: release.yml
image/: sample-manifest.json
public/mediapipe/: NOTICE.txt
scripts/: check-ai-config.mjs  check-ai-safety.mjs  check-ai-settings-ux.mjs  check-ai-tuning.mjs  check-compare-layout-ux.mjs  check-core.mjs  check-desktop-import-paths.mjs  check-desktop-import-payload.mjs  check-export-conflicts.mjs  check-export-exif-fixtures.mjs  check-export-queue.mjs  check-export-target-ux.mjs  check-import-drop-ux.mjs  check-jpg-fixtures.mjs  check-manual-acceptance-results.mjs  check-parameter-inputs.mjs  check-performance-diagnostics.mjs  check-preset-contact-sheets.mjs  check-preset-render.mjs  check-presets.mjs  check-privacy.mjs  check-raw-embedded-preview.mjs  extract-raw-jpg-fixtures.mjs  generate-preset-contact-sheets.mjs  generate-release-evidence.mjs  generate-release-readiness.mjs  install-android-gallery-plugin.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/mobile/android/: GalleryPlugin.kt
src-tauri/src/: lib.rs  main.rs
src/app/: AppShell.tsx  MobileApp.tsx
src/diagnostics/: phase5AiBatchExportDiagnostics.tsx  phase5AiConnectionDiagnostics.tsx  phase5AiLiveDiagnostics.ts  phase5AiRawDiagnostics.tsx  phase5AiRawLiveDiagnostics.ts  phase5DesktopDiagnostics.ts  phase5Diagnostics.ts  (+6 more)
(+18 files in other folders)
